--- a/frontend/src/components/Home/Home.scss
+++ b/frontend/src/components/Home/Home.scss
@@ -86,6 +86,9 @@
       font-size: 1.2rem;
       margin-bottom: 1rem;
     }
+    :nth-child(5) {
+      display: none;
+    }
 
     .cta-button {
       display: inline-block;
@@ -101,6 +104,25 @@
       &:hover {
         background-color: #e65c00;
       }
+    }
+  }
+
+  .hidden-button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    opacity: 0.01;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: transparent;
+    z-index: -1;
+
+    &:hover {
+      opacity: 0.1;
     }
   }
 }
